[tool.poetry]
name = "spamoverflow-nimeshgarg"
version = "0.1.0"
description = "CSSE6400 Assignment"
authors = ["Nimesh Garg"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
